syntax = "proto3";

package quasar;

service QuasarService {
  rpc ProcessTransaction(TransactionRequest) returns (TransactionResponse);
}

message TransactionRequest {
  string id = 1;
  oneof instruction {
    TransferInstruction transfer = 2;
    CreateAccountInstruction create_account = 3;
  }
}

message TransactionResponse {
  bool success = 1;
  string error_message = 2;
}

message TransferInstruction {
  string source_account_id = 1;
  string destination_account_id = 2;
  uint64 amount = 3;
}

message CreateAccountInstruction {
}